// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render default slot 1`] = `<button class="buri-button buri-button--default buri-button--large buri-button--square buri-goods-action-button buri-goods-action-button--first buri-goods-action-button--last"><span class="buri-button__text">Default Content</span></button>`;

exports[`Icon render default slot 1`] = `
<div role="button" tabindex="0" class="buri-goods-action-icon">
  <div class="buri-icon buri-icon-undefined buri-goods-action-icon__icon">
    <!---->
  </div>Default Content
</div>
`;

exports[`Icon render icon slot 1`] = `
<div role="button" tabindex="0" class="buri-goods-action-icon">
  <div class="buri-goods-action-icon__icon">Custom Icon</div>Text
</div>
`;
